--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
 		<div id="project3">
 			<a href="project.html">
 				<h2>Magic The Gathering</h2>
-				<img src="images/MTG-1.JPG" alt="Lorem Pixel image">
+				<img src="images/MTG-1.jpg" alt="Lorem Pixel image">
 				
 			</a>
 		</div>
@@ -61,7 +61,7 @@
 		<div id="project5">
 			<a href="project.html">
 				<h2>Donut Media</h2>
-				<img src="images/maxresdefault1.JPG" alt="Lorem Pixel image">
+				<img src="images/maxresdefault1.jpg" alt="Lorem Pixel image">
 				
 			</a>
 		</div>
