--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,11 @@
 
 <html>
 <head>
-	<title>HCI Project Portfolio</title>
+	<title>My Website</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--Link to css-->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- this is a comment in HTML -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -15,6 +17,7 @@
 </head>
 
 <body>
+		
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
@@ -31,7 +34,7 @@
 		<div id="project1">
 			<a href="project.html">
 				<h2>Darts</h2>
-				<img src="images/Dartz.JPG" alt="Lorem Pixel image">
+				<img src="images/Dartz.JPG" alt="Lorem Pixel image" class="center">
 				
 			</a>
 		</div>
