--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
 		<div id="project5">
 			<a href="project.html">
 				<h2>Donut Media</h2>
-				<img src="images/maxresdefault1.1.JPG" alt="Lorem Pixel image">
+				<img src="images/maxresdefault1.1.jpg" alt="Lorem Pixel image">
 				
 			</a>
 		</div>
